<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/iv_signUpCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_circle" />

    <LinearLayout
        android:id="@+id/linearLayout_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_signUpCircle">

        <TextView
            android:id="@+id/tv_appName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name1"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:fontFamily="@font/recursive_casual_black" />

        <TextView
            android:id="@+id/tv_appName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name2"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:fontFamily="@font/recursive_casual_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="35sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_appName" />

    <TextView
        android:id="@+id/tv_signUpSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpTitle" />

    <LinearLayout
        android:id="@+id/linearLayout_signUpForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUpSubtitle">

        <EditText
            android:id="@+id/et_signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:ems="10"
            android:hint="@string/signup_username_hint"
            android:inputType="text"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:ems="10"
            android:hint="@string/signup_email_hint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:ems="10"
            android:hint="@string/signup_password_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_signUpPasswordConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:ems="10"
            android:hint="@string/signup_password_conf_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/button_primary_rounded_corner" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/signup_alreadyRegistered"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_signUpForm" />

</androidx.constraintlayout.widget.ConstraintLayout>